Fix name overlapping

--- a/client/screen.css
+++ b/client/screen.css
@@ -79,8 +79,9 @@ table {
     min-width: 50px;
     text-align: center;
     cursor: pointer;
-    height: 15px;
+    min-height: 15px;
     line-height: 15px;
+    max-width: 100%;
 }
 
 #names .name.me:after {
@@ -142,7 +143,15 @@ table {
 }
 
 .nametext {
-    
+    white-space: pre;
+    white-space: -moz-nowrap !important;
+    white-space: -webkit-nowrap;
+    white-space: nowrap;
+    word-wrap: break-word;
+    word-break: break-all;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 100%;
 }
 
 input[type="range"] {
